test_translator/tests/data/checkpoint_2/errors/03_missing_decimal_entrypoint/solution.py
from decimal import Decimal


def another_func():
    return Decimal("1.5")
